Adding respecful notice

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/block-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Find Block, Square, Cash App, Tidal, Afterpay, Bitkey, and Proto experts on Twitter. Connect with the right people for your questions about payments, developer tools, banking, and more." />
     <title>Who to Bother - Block Experts</title>
